Set GitHub Pages username

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   <p><a href="pages/about.html">Learn more</a> • <a href="pages/products.html">Browse products</a> • <a href="pages/contact.html">Send a message</a></p>
                   <div style="height:12px"></div>
                   <div class="notice small">
-                    Tip: this is meant for GitHub Pages at <span class="code">https://YOURUSERNAME.github.io</span>.
+                    Tip: this is meant for GitHub Pages at <span class="code">https://amrzaki_microsoft.github.io</span>.
                   </div>
                 </div>
               </div>
