--- a/pages/contact.html
+++ b/pages/contact.html
@@ -65,7 +65,7 @@
                   <h2>Tips</h2>
                   <p class="small">To test 404 handling, visit <a href="../does-not-exist">/does-not-exist</a> after Pages is enabled.</p>
                   <div style="height:10px"></div>
-                  <div class="notice small">GitHub Pages for user sites expects the repo name to be <span class="code">amrzaki_microsoft.github.io</span>.</div>
+                  <div class="notice small">GitHub Pages for user sites expects the repo name to be <span class="code">amrzakimicrosoft2000.github.io</span>.</div>
                 </div>
               </div>
             </div>
