Add Google Search Console verification meta

--- a/pages/products.html
+++ b/pages/products.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Test Site • Products</title>
     <meta name="description" content="Example products page for GitHub Pages test site." />
+    <meta name="google-site-verification" content="ScYNW9LYapYnzFp-hJct72IO7NpnL2sPmynakqmTnoI" />
     <link rel="stylesheet" href="../assets/css/styles.css" />
     <script defer src="../assets/js/site.js"></script>
   </head>
