--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Not Found • Test Site</title>
     <meta name="robots" content="noindex" />
+    <meta name="google-site-verification" content="ScYNW9LYapYnzFp-hJct72IO7NpnL2sPmynakqmTnoI" />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <script defer src="assets/js/site.js"></script>
   </head>
