Add Google Analytics tag

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Test Site • About</title>
     <meta name="description" content="About this GitHub Pages test site." />
-    <meta name="google-site-verification" content="ScYNW9LYapYnzFp-hJct72IO7NpnL2sPmynakqmTnoI" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3DRRB260KQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-3DRRB260KQ');
+    </script>
     <link rel="stylesheet" href="../assets/css/styles.css" />
     <script defer src="../assets/js/site.js"></script>
   </head>
