--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Test Site • Contact</title>
     <meta name="description" content="Contact page for the GitHub Pages test site." />
-    <meta name="google-site-verification" content="ScYNW9LYapYnzFp-hJct72IO7NpnL2sPmynakqmTnoI" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3DRRB260KQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-3DRRB260KQ');
+    </script>
     <link rel="stylesheet" href="../assets/css/styles.css" />
     <script defer src="../assets/js/site.js"></script>
   </head>
@@ -66,7 +74,7 @@
                   <h2>Tips</h2>
                   <p class="small">To test 404 handling, visit <a href="../does-not-exist">/does-not-exist</a> after Pages is enabled.</p>
                   <div style="height:10px"></div>
-                  <div class="notice small">GitHub Pages for user sites expects the repo name to be <span class="code">amrzakimicrosoft2000.github.io</span>.</div>
+                  <div class="notice small">GitHub Pages for user sites expects the repo name to be <span class="code">amrzaki_microsoft.github.io</span>.</div>
                 </div>
               </div>
             </div>
