--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Test Site • Home</title>
     <meta name="description" content="A small multi-page static site for GitHub Pages testing." />
-    <meta name="google-site-verification" content="ScYNW9LYapYnzFp-hJct72IO7NpnL2sPmynakqmTnoI" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3DRRB260KQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-3DRRB260KQ');
+    </script>
     <link rel="stylesheet" href="assets/css/styles.css" />
     <script defer src="assets/js/site.js"></script>
   </head>
@@ -55,7 +63,7 @@
                   <p><a href="pages/about.html">Learn more</a> • <a href="pages/products.html">Browse products</a> • <a href="pages/contact.html">Send a message</a></p>
                   <div style="height:12px"></div>
                   <div class="notice small">
-                    Tip: this is meant for GitHub Pages at <span class="code">https://amrzakimicrosoft2000.github.io</span>.
+                    Tip: this is meant for GitHub Pages at <span class="code">https://amrzaki_microsoft.github.io</span>.
                   </div>
                 </div>
               </div>
