--- a/pages/products.html
+++ b/pages/products.html
@@ -6,6 +6,15 @@
     <title>Test Site • Products</title>
     <meta name="description" content="Example products page for GitHub Pages test site." />
     <meta name="google-site-verification" content="ScYNW9LYapYnzFp-hJct72IO7NpnL2sPmynakqmTnoI" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3DRRB260KQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-3DRRB260KQ');
+    </script>
     <link rel="stylesheet" href="../assets/css/styles.css" />
     <script defer src="../assets/js/site.js"></script>
   </head>
